@@ -6,6 +6,7 @@
 <!ENTITY lgr    "&#0955;">
 <!ENTITY mu     "&#0956;">
 <!ENTITY sigma  "&#0963;">
+<!ENTITY rgr    "&#0961;">
 <!ENTITY hellip "&#8230;">
 <!ENTITY mdash  "&#8212;">
 <!ENTITY latex  "LaTeX">
